# sb3_to_python

./: .gitignore  README.md  a.py  c___.py  convertitore.py  debug.py  home.py  pyproject.toml
addons/sb3_to_python_addons_pack/: README_ADDONS.md  convertitore.py
addons/sb3_to_python_addons_pack/downloadable_addons/: custom_generic.py
addons/sb3_to_python_addons_pack/sb3_to_python/: addon_base.py  cli.py  runtime_helpers.py
addons/sb3_to_python_addons_pack/sb3_to_python/addons/: __init__.py  official.py
sb3_to_python/: __init__.py  cli.py  converter.py  runtime.py
tests/: test_converter.py
